fix: 코드래빗 수정 사항 적용