@@ -7,7 +7,6 @@ import com.team15gijo.post.domain.model.v2.PostV2;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Getter;
@@ -31,14 +30,19 @@ public class PostElasticsearchRequestDto {
     private LocalDateTime createdAt;
 
     public static PostElasticsearchRequestDto fromV1(Post post) {
+        if (post == null) {
+            throw new IllegalArgumentException("Post cannot be null");
+        }
         return PostElasticsearchRequestDto.builder()
                 .postId(post.getPostId())
                 .username(post.getUsername())
                 .postContent(post.getPostContent())
                 .hashtags(
-                        post.getHashtags().stream()
+                        post.getHashtags() != null ?
+                                post.getHashtags().stream()
                                 .map(Hashtag::getHashtagName)
-                                .collect(Collectors.toList())
+                                .toList()
+                                : List.of()
                 )
                 .region(post.getRegion())
                 .createdAt(post.getCreatedAt())
@@ -46,14 +50,19 @@ public class PostElasticsearchRequestDto {
     }
 
     public static PostElasticsearchRequestDto fromV2(PostV2 post) {
+        if (post == null) {
+            throw new IllegalArgumentException("PostV2 cannot be null");
+        }
         return PostElasticsearchRequestDto.builder()
                 .postId(post.getPostId())
                 .username(post.getUsername())
                 .postContent(post.getPostContent())
                 .hashtags(
-                        post.getHashtags().stream()
-                                .map(HashtagV2::getHashtagName)
-                                .collect(Collectors.toList())
+                        post.getHashtags() != null ?
+                                post.getHashtags().stream()
+                                        .map(HashtagV2::getHashtagName)
+                                        .toList()
+                                : List.of()
                 )
                 .region(post.getRegion())
                 .createdAt(post.getCreatedAt())
